<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.em9736.androcon.MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_alignParentStart="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            android:id="@+id/textView" />
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testjena"
        android:id="@+id/jenaButton"
        android:onClick="loadRDF"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="167dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createtdb"
        android:id="@+id/tButton"
        android:layout_alignBottom="@+id/jenaButton"
        android:layout_toEndOf="@+id/jenaButton"
        android:onClick="createDB" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertcontext"
        android:id="@+id/iButton"
        android:layout_alignTop="@+id/tButton"
        android:layout_toEndOf="@+id/tButton"
        android:onClick="updateContext" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/querycontext"
        android:id="@+id/qButton"
        android:layout_alignTop="@+id/iButton"
        android:layout_toEndOf="@+id/iButton"
        android:onClick="queryContext" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deletecontext"
        android:id="@+id/dButton"
        android:layout_alignTop="@+id/qButton"
        android:layout_toEndOf="@+id/qButton"
        android:onClick="deleteContext" />
</RelativeLayout>
